# communication_dsoftbus

./: .clang-format  .gitignore  0024.diff  1.txt  11795.diff  123.diff  AGENTS.md  BUILD.gn  CODEOWNERS  Kconfig  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  check_sub_module.py  config.py  dsoftbus.gni  hisysevent.yaml  ohos.build  run_shell_cmd.py  tmp.patch
adapter/: BUILD.gn
adapter/common/: BUILD.gn
adapter/common/bus_center/: BUILD.gn  bus_center_adapter.gni  common_bus_center.gni
adapter/common/dfx/: softbus_adapter_hisysevent.cpp  softbus_adapter_hisysevent_mini.c  softbus_adapter_hisysevent_nstack.c  softbus_adapter_hitrace.c  softbus_adapter_hitrace_virtual.c  softbus_adapter_hitracechain.c  softbus_adapter_hitracechain_virtual.c  softbus_adapter_hiview.cpp  softbus_adapter_xcollie.cpp  softbus_adapter_xcollie_virtual.cpp  xcollie_helper.cpp  xcollie_helper_virtual.cpp
adapter/common/include/: bus_center_adapter.h  lnn_ip_utils_adapter.h  softbus_adapter_atomic.h  softbus_adapter_cpu.h  softbus_adapter_crypto.h  softbus_adapter_errcode.h  softbus_adapter_file.h  softbus_adapter_hisysevent.h  softbus_adapter_hitrace.h  softbus_adapter_hitracechain.h  softbus_adapter_hiview.h  softbus_adapter_json.h  softbus_adapter_log.h  softbus_adapter_mem.h  softbus_adapter_perf.h  softbus_adapter_range.h  softbus_adapter_socket.h  softbus_adapter_thread.h  softbus_adapter_timer.h  softbus_adapter_xcollie.h  softbus_aes_encrypt.h  xcollie_helper.h
adapter/common/log/: softbus_adapter_log.c
adapter/common/mbedtls/: softbus_adapter_crypto.c  softbus_aes_encrypt_virtual.c  softbus_rsa_encrypt_virtual.c
adapter/common/openssl/: softbus_adapter_crypto.c  softbus_aes_encrypt.c  softbus_rsa_encrypt.c
adapter/common/perf/: softbus_adapter_perf.c
adapter/common/range/: softbus_adapter_range.c
adapter/default_config/spec_config/: softbus_config_adapter.c  softbus_config_adapter.h  softbus_config_type.h
adapter/feature_config/external_deps_feature/: external_deps_feature.gni
adapter/feature_config/inner_feature/: disc_inner_feature.gni  lnn_inner_feature.gni  softbus_common_feature.gni  t2stack_inner_feature.gni  trans_inner_feature.gni
adapter/feature_config/public_feature/: public_feature.gni
adapter/manager/: softbus_adapter_init.c  softbus_adapter_init.h
br_proxy/: BUILD.gn  br_proxy.c  br_proxy.gni  br_proxy.h  br_proxy_adapter.cpp  br_proxy_adapter_virtual.cpp  br_proxy_common.cpp  br_proxy_common.h  br_proxy_module.c  br_proxy_module_virtual.c  br_proxy_server_manager.c  br_proxy_server_manager.h  br_proxy_server_manager_virtual.c  br_proxy_session_manager.c  br_proxy_session_manager.h  br_proxy_storage.c  br_proxy_storage.h  hap_uninstall_observer.cpp  hap_uninstall_observer.h
br_proxy/common/include/: br_proxy_error_code.h  softbus_napi_utils.h
br_proxy/common/src/: br_proxy_error_code.c  softbus_napi_utils.c
br_proxy/group/: BUILD.gn
br_proxy/taihe/: BUILD.gn
br_proxy/taihe/idl/: ohos.distributedsched.proxyChannelManager.taihe
br_proxy/taihe/src/: ani_constructor.cpp  ohos.distributedsched.proxyChannelManager.impl.cpp  ohos.distributedsched.proxyChannelManager.impl.virtual.cpp
components/dfinder/: BUILD.gn
components/dfinder/include/: nstackx.h
components/mbedtls/: BUILD.gn
core/: BUILD.gn  cfi_blocklist.txt
core/adapter/: core_adapter.gni
core/adapter/bus_center/: BUILD.gn
core/adapter/kernel/: BUILD.gn
core/authentication/: BUILD.gn  authentication.gni
core/authentication/accountgroup/: auth_account_group_manager.c
core/authentication/applykey/: auth_apply_key_manager.c  auth_apply_key_manager_virtual.c  auth_apply_key_process.c  auth_apply_key_process_virtual.c  auth_apply_key_virtual.c
core/authentication/bind/: auth_device_profile_listener.cpp  auth_device_profile_listener_virtual.cpp
core/authentication/include/: auth_account_group_manager.h  auth_apply_key_manager.h  auth_apply_key_process.h  auth_attest_interface.h  auth_common.h  auth_connection.h  auth_device.h  auth_device_common_key.h  auth_device_profile_listener.h  auth_deviceprofile.h  auth_hichain.h  auth_hichain_adapter.h  auth_hichain_request.h  auth_identity_service_adapter.h  auth_lane.h  auth_manager.h  auth_meta_manager.h  auth_meta_ptk_proc.h  auth_normalize_request.h  auth_p2p.h  auth_pre_link.h  auth_request.h  auth_session_fsm.h  auth_session_json.h  auth_session_key.h  auth_session_message.h  auth_sessionkey.h  auth_socket.h  auth_tcp_connection.h  auth_uk_manager.h  auth_user_common_key.h  customized_security_protocol.h  device_profile_listener.h  lnn_app_bind_interface.h
core/authentication/interface/: auth_channel.h  auth_interface.h  ccmp_interface.h
core/authentication/manager/: softbus_authentication_init.c  (+1 more)
core/broadcast/: broadcast.gni
core/bus_center/: BUILD.gn  bus_center_server.gni
core/common/: BUILD.gn
core/connection/: BUILD.gn  conn.gni  connection_knowledge.md
core/discovery/: BUILD.gn  disc.gni
core/frame/: BUILD.gn
core/transmission/: BUILD.gn  core_knowledge.md  trans.gni  transmission_knowledge.md
core/transmission_socket/: trans.gni
dfx/: BUILD.gn  dsoftbus_dfx.gni
dfx/statistics/: trans_network_statistics.c
sdk/: BUILD.gn  libsoftbus_client_map
sdk/bus_center/: BUILD.gn  bus_center_sdk.gni
sdk/connection/: connection_sdk.gni
sdk/discovery/: BUILD.gn  disc_sdk.gni
sdk/frame/: BUILD.gn  frame_sdk.gni  softbus_client_event_manager.c  softbus_client_frame_manager.c  softbus_client_frame_manager_weak.c
sdk/taihe/: BUILD.gn
sdk/transmission/: BUILD.gn  trans_sdk.gni
tests/: BUILD.gn  cfi_blocklist.txt
tests/adapter/: BUILD.gn
tests/br_proxy/: BUILD.gn  br_proxy_error_code_test.cpp  br_proxy_ext_test.cpp  br_proxy_server_manager_ext_test.cpp  br_proxy_server_manager_test.cpp  br_proxy_test.cpp  trans_br_proxy_storage_test.cpp
tests/core/: BUILD.gn
tests/dfx/: BUILD.gn
tests/include/: main_test.h
tests/sdk/: BUILD.gn
tests/utils/: exception_branch_checker.cpp  exception_branch_checker.h  utils.gni
tools/: BUILD.gn
tools/device_info/: get_device_info.c
(+4430 files in other folders)
